[LFC][BFC] assert-not-implemented-yet on inflow non-replaced height when style is not fixed/auto. https://bugs.webkit.org/show_bug.cgi?id=187969

Reviewed by Antti Koivisto.

Assert on unsupported height types when computing inflow non-replaced height.

* layout/blockformatting/BlockFormattingContextGeometry.cpp:
(WebCore::Layout::BlockFormattingContext::Geometry::inFlowNonReplacedHeightAndMargin):

Canonical link: https://commits.webkit.org/203198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234253 268f45cc-cd09-0410-ab3c-d52691b4dbfc